--- a/webtest-spring-rest/src/main/resources/META-INF/applicationJdbc.properties
+++ b/webtest-spring-rest/src/main/resources/META-INF/applicationJdbc.properties
@@ -1,5 +1,5 @@
 ## JDBC MySQL Connection Config
 jdbc.mysql.dataSource.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.mysql.dataSource.url=jdbc:mysql://localhost:3306/mydb
+jdbc.mysql.dataSource.url=jdbc:mysql://35.188.197.86:3306/mydb?useSSL=false
 jdbc.mysql.dataSource.username=myuser
 jdbc.mysql.dataSource.password=mypassword
