--- a/webtest-spring-rest/pom.xml
+++ b/webtest-spring-rest/pom.xml
@@ -42,7 +42,9 @@
 		<assertj.version>3.11.1</assertj.version>
 		<mockito-core.version>2.8.9</mockito-core.version>
 		<powermock.version>1.7.4</powermock.version>
-	</properties>
+<appengine.app.version>1</appengine.app.version>
+    <appengine.target.version>1.9.71</appengine.target.version>
+    <appengine-maven-plugin-version>1.3.2</appengine-maven-plugin-version>	</properties>
 
 	<dependencies>
 		<!-- Spring dependencies -->
