--- a/webtest-spring-rest/pom.xml
+++ b/webtest-spring-rest/pom.xml
@@ -10,9 +10,6 @@
 	<packaging>war</packaging>
 	<name>webtest-spring-rest Maven Webapp</name>
 	<url>http://www.softtek.com</url>
-	<!-- this is a comment to test branching  but I changed it as well-->
-	<!-- but added this too -->
-	<!-- what about this? -->
 	<repositories>
 		<repository>
 			<id>public</id>
@@ -38,34 +35,33 @@
         <jackson.version>2.9.6</jackson.version>
         <!-- unit test properties -->
 		<junit.version>4.12</junit.version>
-		<junit.platform.version>1.3.1</junit.platform.version>
+		<junit.platform.version>1.3.1</junit.platfgitorm.version>
 		<assertj.version>3.11.1</assertj.version>
 		<mockito-core.version>2.8.9</mockito-core.version>
 		<powermock.version>1.7.4</powermock.version>
-<appengine.app.version>1</appengine.app.version>
-    <appengine.target.version>1.9.71</appengine.target.version>
-    <appengine-maven-plugin-version>1.3.2</appengine-maven-plugin-version>	</properties>
-
+        <appengine.app.version>1</appengine.app.version>
+        <appengine.target.version>1.9.9</appengine.target.version>
+        <appengine-maven-plugin-version>2.2.0</appengine-maven-plugin-version>	</properties>
 	<dependencies>
 		<!-- Spring dependencies -->
-<dependency>
-      <groupId>com.google.appengine</groupId>
-      <artifactId>appengine-api-1.0-sdk</artifactId>
-      <version>${appengine.target.version}</version>
-      </dependency>
-     <dependency>
-      <groupId>com.google.appengine</groupId>
-      <artifactId>appengine-testing</artifactId>
-      <version>${appengine.target.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.appengine</groupId>
-      <artifactId>appengine-api-stubs</artifactId>
-      <version>${appengine.target.version}</version>
-      <scope>test</scope>
-      </dependency>
-      <dependency>
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-api-1.0-sdk</artifactId>
+            <version>${appengine.target.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-testing</artifactId>
+            <version>${appengine.target.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-api-stubs</artifactId>
+            <version>${appengine.target.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
@@ -96,12 +92,12 @@
 			<artifactId>javax.ws.rs-api</artifactId>
 			<version>2.1.1</version>
 		</dependency>
-<dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>javax.servlet-api</artifactId>
-    <version>3.1.0</version>
-    <!-- <scope>provided</scope> -->
-</dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <!-- <scope>provided</scope> -->
+        </dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
@@ -301,11 +297,11 @@
 	<build>
 		<finalName>webtest-spring-rest</finalName>
 		<plugins>
-		<plugin>
-        <groupId>com.google.cloud.tools</groupId>
-        <artifactId>appengine-maven-plugin</artifactId>
-        <version>${appengine-maven-plugin-version}</version>
-      </plugin>
+		    <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>${appengine-maven-plugin-version}</version>
+            </plugin>
 			<plugin>
 				<groupId>com.mysema.maven</groupId>
 				<artifactId>apt-maven-plugin</artifactId>
