--- a/webtest-spring-rest/pom.xml
+++ b/webtest-spring-rest/pom.xml
@@ -42,9 +42,10 @@
 		<assertj.version>3.11.1</assertj.version>
 		<mockito-core.version>2.8.9</mockito-core.version>
 		<powermock.version>1.7.4</powermock.version>
-<appengine.app.version>1</appengine.app.version>
-    <appengine.target.version>1.9.71</appengine.target.version>
-    <appengine-maven-plugin-version>1.3.2</appengine-maven-plugin-version>	</properties>
+		<appengine.app.version>1</appengine.app.version>
+    	<appengine.target.version>1.9.71</appengine.target.version>
+    	<appengine-maven-plugin-version>1.3.2</appengine-maven-plugin-version>	
+    </properties>
 
 	<dependencies>
 		<!-- Spring dependencies -->
@@ -301,11 +302,11 @@
 	<build>
 		<finalName>webtest-spring-rest</finalName>
 		<plugins>
-		<plugin>
-        <groupId>com.google.cloud.tools</groupId>
-        <artifactId>appengine-maven-plugin</artifactId>
-        <version>${appengine-maven-plugin-version}</version>
-      </plugin>
+			<plugin>
+        		<groupId>com.google.cloud.tools</groupId>
+        		<artifactId>appengine-maven-plugin</artifactId>
+       			<version>${appengine-maven-plugin-version}</version>
+      		</plugin>
 			<plugin>
 				<groupId>com.mysema.maven</groupId>
 				<artifactId>apt-maven-plugin</artifactId>
